# chat-client-toy

./: .env.example  .gitignore  MY_DELHI_QUERY_RESULTS.md  PROMPT_BUILDER_CHALLENGES.md  README.md  ingest.py  main.py  pyproject.toml  server.py  start.sh  stop.sh
client/: AnthropicClient.py  OllamaClient.py  OpenAIClient.py  __init__.py  base.py  models.py  openai_compat_base.py
data/: .gitkeep  pageindex_cache.db
database/: ChunkRecord.py  FileRecord.py  cache.py  connection.py
logs/: NOVEMBER NEWCASTLE MENU WEB VIEW.pdf_20260403_134633.json  NOVEMBER NEWCASTLE MENU WEB VIEW.pdf_20260403_134815.json  NOVEMBER NEWCASTLE MENU WEB VIEW.pdf_20260403_140230.json  NOVEMBER NEWCASTLE MENU WEB VIEW.pdf_20260403_140341.json  NOVEMBER NEWCASTLE MENU WEB VIEW.pdf_20260403_140731.json
pageindex_lib/: config.yaml  page_index.py  utils.py
providers/: AnthropicClient.py  GrokClient.py  GroqClient.py  OllamaClient.py  OpenAIClient.py  ProviderFactory.py  __init__.py  base.py  models.py  openai_compat_base.py
services/: ChunkContext.py  PDFVisionExtractor.py  PageIndexService.py  PromptBuilder.py
tests/: CHALLENGE3_EXAMPLES.md  CHALLENGE3_GUIDE.md  CHALLENGE4_GUIDE.md  __init__.py  challenge1_solution.py  challenge2_solution.py  challenge3_solution.py  challenge4_solution.py  challenge5_solution.py  test_challenge1.py  test_challenge2.py  test_challenge3.py  test_challenge4.py  test_challenge5.py  test_challenge6.py  test_challenge_places1.py  test_challenge_places2.py  test_challenge_places3.py  test_challenge_places4.py  test_challenge_places5.py  test_identity.json  (+1 more)
(+15 files in other folders)
